# Fighting

./: .gitignore  CMakeLists.txt  README.md  日志.md
apps/: client_main.cpp  server_main.cpp
build-codex/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab_stress  lab_tests
build-codex/Testing/Temporary/: CTestCostData.txt
build-vscode/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  lab_client  lab_server  lab_stress  lab_tests
build-vscode/.cmake/api/v1/reply/: cache-v2-945bccc3c93a17e72a9f.json  cmakeFiles-v1-8b153e63aba285287ecf.json  codemodel-v2-5edcbfb212fe6d39f9c3.json  index-2026-04-25T08-31-48-0973.json  target-lab_client-Debug-35d21f2c108ef32eff0a.json  target-lab_core-Debug-fc49dd4837dcad35ae54.json  target-lab_server-Debug-01bb8ffcc7a5a85a8058.json  target-lab_stress-Debug-79eb4f910b4c5308b653.json  target-lab_tests-Debug-6f4e4e097ae9897f5ea4.json  toolchains-v1-a50285ee8b09d57ad349.json
build-vscode/Testing/: TAG
build-vscode/Testing/20260424-1330/: Test.xml
build-vscode/Testing/20260425-0022/: Test.xml
build-vscode/Testing/Temporary/: CTestCostData.txt
docs/: ARCHITECTURE.md  PROJECT_DESIGN.md  STRESS_TEST_REPORT.md
include/lab/app/: ClientRender.h  GameConfig.h  InputPrediction.h
include/lab/core/: FixedTimestepRunner.h
include/lab/io/: RecordReplay.h
include/lab/net/: NetCodec.h  NetStub.h  Packets.h  UdpSocket.h
include/lab/sim/: Hasher.h  InputBuffer.h  InputCmd.h  InputHistory.h  Rules.h  StateHistory.h  StateSnapshot.h  World.h
include/lab/time/: Clock.h
include/lab/util/: log.h
src/app/: ClientRender.cpp  InputPrediction.cpp
src/core/: FixedTimestepRunner.cpp
src/io/: RecordReplay.cpp
src/net/: NetCode.cpp  NetStub.cpp  UdpSocket.cpp
src/sim/: Hasher.cpp  InputBuffer.cpp  World.cpp
src/time/: Clock.cpp
tests/: core_tests.cpp  stress_tests.cpp
